--- a/src/Styles/Global.css
+++ b/src/Styles/Global.css
@@ -1,9 +1,6 @@
 a {
   text-decoration: none !important;
-  color: black !important;
-}
-button {
-  color: black !important;
+  color: black;
 }
 
 ul {
