--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -11,12 +11,13 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 60px;
-  font-weight: 500;
+  font-weight: 500 !important;
   width: 500px;
   font-family: "Inter";
   font-size: 14px;
   gap: 20px;
   padding: 0px;
+  color: black !important;
 }
 
 .header-tab {
